--- a/src/components/HeroPage/HeroPage.module.css
+++ b/src/components/HeroPage/HeroPage.module.css
@@ -1,3 +1,8 @@
 .heroContent {
-align-items: start;
+  display: flex;
+  align-items: start;
+  justify-content:left;
+  flex-direction: column;
+  margin-left: 300px; 
+  margin-top: 280px;
 }
