--- a/src/components/global/Navbar/Navbar.module.css
+++ b/src/components/global/Navbar/Navbar.module.css
@@ -27,7 +27,7 @@
 }
 
 .navList {
-  transform: rotate(-90deg) translate3d(-50%, -230%, 0);
+  transform: rotate(-90deg) translate3d(17%, -210%, 0);
   display: flex;
   flex-direction: row-reverse;
   position: relative;
@@ -87,9 +87,10 @@
   align-items: center;
   justify-content: center;
   position: relative;
-  right : 100px;
-  font-size: 23px;
+  font-size: 24px;
+  /* right : 250px; */
 
+  
 }
 
 .navIconLink {
@@ -112,6 +113,7 @@
 .navIcon {
   fill: currentColor;
   transition: fill var(--durationM) ease;
+
 }
 
 .mobileNav {
