--- a/src/components/HeroPage/HeroPage.module.css
+++ b/src/components/HeroPage/HeroPage.module.css
@@ -1,6 +1,13 @@
-.LocalisationSection {
+.localisationSection {
   position: absolute;
   top: 50px;
   left: 0;
   right: 0;
+}
+
+.helloBox {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
 }
