Implement sections for smooth scroll

--- a/src/components/global/Navbar/Navbar.module.css
+++ b/src/components/global/Navbar/Navbar.module.css
@@ -5,7 +5,7 @@
   top: 35px;
   font-size: 35px;
   font-family: "lato", "sans-serif";
-  font-weight: 800;
+  font-weight: 700;
 }
 
 .navBar {
@@ -33,16 +33,7 @@
 }
 
 .navLink {
-  padding: var(--spaceM);
-  color: rgb(var(--rgbText) / 0.8);
-  font-weight: var(--fontWeightMedium);
-  font-size: var(--headerNavFontSize);
-  text-decoration: none;
-  position: relative;
-  transition: color var(--durationS) ease 0.1s;
-  line-height: 1;
-  display: inline-flex;
-  align-items: center;
+  cursor: pointer;
 }
 
 .navIcons {
