--- a/src/components/Home/HeroPage/HeroPage.module.css
+++ b/src/components/Home/HeroPage/HeroPage.module.css
@@ -23,4 +23,24 @@
   bottom: 0;
   left: 0;
   width: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+  display: flex;
+}
+
+.helloBox > div {
+  /* Remove the 'display: flex' property */
+  animation: scrollText 10s linear infinite;
+  white-space: nowrap;
+  bottom: 0;
+  left: 0;
+}
+
+@keyframes scrollText {
+  0% {
+    transform: translateX(100%); /* Modifiez la valeur pour commencer à droite */
+  }
+  100% {
+    transform: translateX(-100%);
+  }
 }
