--- a/src/components/Home/HeroPage/HeroPage.module.css
+++ b/src/components/Home/HeroPage/HeroPage.module.css
@@ -30,7 +30,7 @@
 
 .helloBox > div {
   /* Remove the 'display: flex' property */
-  animation: scrollText 10s linear infinite;
+ /* animation: scrollText 10s linear infinite;*/
   white-space: nowrap;
   bottom: 0;
   left: 0;
