--- a/src/components/global/Navbar/Navbar.module.css
+++ b/src/components/global/Navbar/Navbar.module.css
@@ -6,6 +6,7 @@
   font-size: 35px;
   font-family: "lato", "sans-serif";
   font-weight: 700;
+  background-color: transparent;
 }
 
 .navBar {
@@ -14,6 +15,7 @@
   justify-content: flex-start;
   padding: 0;
   position: fixed; 
+  background-color: transparent;
 }
 
 .nav {
@@ -21,6 +23,7 @@
   flex-direction: column;
   justify-content: space-between; 
   align-items: center;
+  background-color: transparent;
 }
 
 .navList {
@@ -29,11 +32,13 @@
   flex-direction: row-reverse;
   position: relative;
   top:450px; 
+  background-color: transparent;
 
 }
 
 .navLink {
   cursor: pointer;
+  background-color: transparent;
 }
 
 .navIcons {
@@ -45,6 +50,9 @@
   position: relative;
   font-size: 24px;
   /* right : 250px; */
-
-  
 }
+
+.navBarBurgerMenu {
+  background-color: transparent;
+}
+
