--- a/src/components/Home/HeroPage/HeroPage.module.css
+++ b/src/components/Home/HeroPage/HeroPage.module.css
@@ -7,7 +7,11 @@
 }
 
 .localisationSection {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: absolute;
+  flex-direction: column;
   top: 35px;
   left: 0;
   right: 0;
