--- a/src/components/global/Navbar/SwipeableDrawerMenu.module.css
+++ b/src/components/global/Navbar/SwipeableDrawerMenu.module.css
@@ -1,5 +1,13 @@
 .navSwipeableIcons {
   font-size: 20px;
+  z-index: 1;
+
+}
+
+.navSwipeableIcons:hover {
+  font-size: 20px;
+  transform: translateY(-2px);
+  background-image: none !important;
 
 }
 
@@ -7,3 +15,24 @@
   font-size: 20px;
   color: #0000;
 }
+
+.listItemText {
+  position: relative;
+  cursor: pointer;
+}
+
+.listItemText::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -2px;
+  width: 0;
+  height: 1px;
+  background-color: white;
+  transition: width 0.5s;
+}
+
+.listItemText:hover::after {
+  width: 100%;
+}
+
