--- a/src/components/Home/About/About.module.css
+++ b/src/components/Home/About/About.module.css
@@ -1,7 +1,7 @@
 .mainAboutSection {
     display: flex;
     flex-direction: column;
-    margin-top: 6rem;
+    margin-top: 4rem;
 }
 
 .imageProfil > img {
@@ -14,11 +14,12 @@
 
     }
     
-    @media (min-width: 601px) and (max-width: 1299px) {
-        width: 20rem;
+    @media (min-width: 601px) and (max-width: 1110px) {
+        width: 16rem;
     }
     
-    @media (min-width: 1300px) {
+    @media (min-width: 1111px) {
         width: 26rem;
+        padding-right: 20px;
     }
 }
