--- a/src/components/Home/Skills/Skills.module.css
+++ b/src/components/Home/Skills/Skills.module.css
@@ -1,7 +1,6 @@
 .mainSkillsSection {
-  height: 100vh;
   display: flex;
-  align-items: center;
-  justify-content: center;
   flex-direction: column;
+  margin-top: 7rem;
+  height: 100vh;
 }
