--- a/src/components/Home/About/About.module.css
+++ b/src/components/Home/About/About.module.css
@@ -1,7 +1,7 @@
 .mainAboutSection {
     display: flex;
     flex-direction: column;
-    margin-top: 4rem;
+    margin-top: 7rem;
 }
 
 .imageProfil > img {
@@ -11,15 +11,15 @@
 
     @media (max-width: 600px) {
         width: 20.2rem;
-
     }
     
-    @media (min-width: 601px) and (max-width: 1110px) {
-        width: 16rem;
+    @media (min-width: 601px) and (max-width: 1411px) {
+        width: 19rem;
+        padding-right: 0px;
     }
     
-    @media (min-width: 1111px) {
-        width: 26rem;
+    @media (min-width: 1412px) {
+        width: 28em;
         padding-right: 20px;
     }
 }
