--- a/src/components/Home/Portfolio/Portfolio.module.css
+++ b/src/components/Home/Portfolio/Portfolio.module.css
@@ -1,15 +1,125 @@
+.mainPortfolioSection {
+  display: flex;
+  flex-direction: column;
+}
+
 .titleSection {
   padding-top: 6rem;
 }
 
-.mainPortfolioSection {
+.itemsFilter {
   display: flex;
-  flex-direction: column;
-  height: 100vh;
+  align-items: center;
+  column-gap: 1.875rem;
+  margin-bottom: 2.5rem;
+}
+
+.itemSection {
+  cursor: pointer;
+  transition: .3s;
+
+}
+
+.itemSection:hover {
+  color: red; 
+}
+
+ /* .itemContainer {
+  display: grid; 
+  grid-template-columns: repeat(3,1fr);
+  gap: 1.875rem; 
+} */
+
+.itemCard {
+  position: relative;
+  overflow: hidden;
+  border-radius: 2%;
+  box-shadow: 2%;
+  width: 200px;
+  height: 400px;
+}
+
+.itemThumbnail {
+
+}
+
+.itemMask {
+  background: violet;
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  transition: .3s;
+  opacity: 0;
+}
+
+.itemCard:hover .itemMask {
+  opacity: 0.5;
 }
 
 
-.itemsCategorySection {
-  
-  border-radius: 10px;
+.itemCategory {
+  color: violet;
+  background-color: aqua;
+  border-bottom-left-radius: 0.98rem;
+  border-bottom-right-radius: 0.98rem;
+  position: absolute;
+  top: 0;
+  left: 1.5rem; 
+  font-size: 20;
+  display: inline-block;
+  padding: 0.19rem 0.625rem;
+  transform: translateY(-40px);
+  transition: .3s;
 }
+
+.itemTitle {
+  color: aqua;
+  font-size: 25px;
+  margin: 0 0 0.98rem; 
+  padding: 0 1.25rem;
+  position: absolute;
+  top: 3.75rem; 
+  transform: translateY(30px);
+  transition: .3s;
+  opacity: 0;
+}
+.itemImg {
+  width: 100%;
+  height: 100%;
+}
+
+
+.itemButton {
+  color: blue;
+  position: absolute;
+  bottom: 1.5rem;
+  left: 1.5rem;
+  font-size: 25px;
+  display: block;
+  background-color: antiquewhite;
+  height: 40px;
+  width: 40px;
+  cursor: pointer;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 42px;
+  transition: .3s;
+  opacity: 0;
+}
+
+.itemCard:hover .itemButton {
+  opacity: 1;
+}
+
+.itemCard:hover .itemTitle,
+.itemCard:hover .itemCategory {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.iconLink {
+
+}
+
