--- a/src/components/Home/Portfolio/Portfolio.module.css
+++ b/src/components/Home/Portfolio/Portfolio.module.css
@@ -1,10 +1,11 @@
+
 .mainPortfolioSection {
   display: flex;
   flex-direction: column;
 }
 
 .titleSection {
-  padding-top: 6rem;
+  padding-top: 5rem;
 }
 
 .itemsFilter {
@@ -12,6 +13,7 @@
   align-items: center;
   column-gap: 1.875rem;
   margin-bottom: 2.5rem;
+  margin-top: 2.5rem; 
 }
 
 .itemSection {
@@ -24,30 +26,26 @@
   color: red; 
 }
 
- /* .itemContainer {
-  display: grid; 
-  grid-template-columns: repeat(3,1fr);
-  gap: 1.875rem; 
-} */
+ .itemContainer {
+  margin-top: 4rem;
+  gap: 3rem; 
+} 
 
 .itemCard {
   position: relative;
   overflow: hidden;
   border-radius: 2%;
   box-shadow: 2%;
-  width: 200px;
-  height: 400px;
-}
-
-.itemThumbnail {
-
+  min-width: 300px;
+  max-width: 300px ! important;
+  min-height: 300px;
 }
 
 .itemMask {
-  background: violet;
+  background: #F5F0EC;
   position: absolute;
-  left: 0;
   top: 0;
+  left: 0;
   height: 100%;
   width: 100%;
   transition: .3s;
@@ -60,14 +58,11 @@
 
 
 .itemCategory {
-  color: violet;
-  background-color: aqua;
-  border-bottom-left-radius: 0.98rem;
-  border-bottom-right-radius: 0.98rem;
+  color: #F5F0EC;
+  background-color: #191919;
   position: absolute;
   top: 0;
   left: 1.5rem; 
-  font-size: 20;
   display: inline-block;
   padding: 0.19rem 0.625rem;
   transform: translateY(-40px);
@@ -75,8 +70,6 @@
 }
 
 .itemTitle {
-  color: aqua;
-  font-size: 25px;
   margin: 0 0 0.98rem; 
   padding: 0 1.25rem;
   position: absolute;
@@ -85,9 +78,15 @@
   transition: .3s;
   opacity: 0;
 }
-.itemImg {
-  width: 100%;
-  height: 100%;
+
+.itemImgContainer {
+  width: 200px;
+  height: 200px ;
+
+}
+
+.itemImg > img {
+  object-fit:fill;
 }
 
 
@@ -119,7 +118,4 @@
   transform: translateY(0);
 }
 
-.iconLink {
-
-}
 
