--- a/src/components/Home/Portfolio/Portfolio.module.css
+++ b/src/components/Home/Portfolio/Portfolio.module.css
@@ -5,7 +5,7 @@
 }
 
 .titleSection {
-  padding-top: 5rem;
+  padding-top: 4rem;
 }
 
 .itemsFilter {
@@ -14,17 +14,25 @@
   column-gap: 1.875rem;
   margin-bottom: 2.5rem;
   margin-top: 2.5rem; 
+
+  
+  @media (max-width: 600px) {
+    margin-top: 1rem; 
+    flex-direction: column;
+    align-items: flex-start;
+    margin-left: 2.5rem;
+    row-gap: 0rem;
+    margin-bottom: -2rem;
+
+}
 }
 
 .itemSection {
   cursor: pointer;
-  transition: .3s;
+  transition: .25s;
 
 }
 
-.itemSection:hover {
-  color: red; 
-}
 
  .itemContainer {
   margin-top: 4rem;
