--- a/src/components/Home/About/About.module.css
+++ b/src/components/Home/About/About.module.css
@@ -1,7 +1,7 @@
 .mainAboutSection {
     display: flex;
     flex-direction: column;
-    margin-top: 7rem;
+    padding-top: 4.5rem;
 }
 
 .imageProfil > img {
