--- a/src/components/Home/Resume/Resume.module.css
+++ b/src/components/Home/Resume/Resume.module.css
@@ -1,5 +1,5 @@
 .titleSection {
-  padding-top: 3.5rem;
+  padding-top: 4.5rem;
 }
 
 .mainSkillsSection {
@@ -7,12 +7,9 @@
   flex-direction: column;
 }
 
-.resumeContainer {
-  margin-left: -6.5rem;
-}
-
 .educationSection {
-  margin-top: 0rem;
+  margin-bottom: 2rem;
+  border-radius: 1%;
   background-image: linear-gradient(to top left,#B799FF, #9bcfce, #cde7e6, #B799FF);
 }
 
@@ -22,27 +19,28 @@
 
 .WorkSection {
   margin-top: -3rem;
+
+  @media (max-width: 959px) {
+    margin-top: -2rem;
+  }
 }
 
 .resumeTimeline {
   padding: 1.875rem;
   border-radius: 1%;
   position: relative;
-  /* box-shadow: 0 2px 2px rgba(224, 218, 218, 0.2); /*
-  /*background-image: linear-gradient(to top right, #e1d1ff, #cde7e6);*/
 }
 
-/*.resumeTimeline:hover {
-  background-image: linear-gradient(to top right, #cde7e6, #e1d1ff);
-}*/
-
 .sectionEducationText {
-  transform: rotate(-90deg) translateX(-85%) translateY(65%);
   display: flex;
 }
 
 .sectionWorkText {
   display: flex;
   justify-content: flex-end;
+
+  @media (max-width: 959px) {
+    justify-content: flex-start;
+  }
 }
 
