--- a/src/components/Home/Resume/Skills/SkillsSection.module.css
+++ b/src/components/Home/Resume/Skills/SkillsSection.module.css
@@ -3,28 +3,32 @@
 }
 
 .skillsElements {
-  margin: 3rem 20rem 0rem 0rem;
+  margin: 3rem 0rem 0rem 0rem;
 
   @media (max-width: 599px) {
-    margin: 4rem 1rem 0rem 1rem;
+    margin: 2rem 0rem 0rem 0rem;
   }
-  
-  @media (min-width: 600px) and (max-width: 959px) {
-    margin: 4rem 3rem 0rem 4rem;
-  }
+
 }
 
 .skillsCardsItem {
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  padding: 3rem 4rem 3rem;
+  padding: 2rem 2rem 2rem;
   border-radius: 1.25rem;
   transition: background-color 0.3s ease;
+  width: 410px;
+  height: 550px;
+
+  @media (max-width: 599px) {
+    padding: 2rem 1rem 0rem 2rem;
+    width: 310px;
+    max-height: 580px;
+  }
 }
 
-.skillsCardsItem:hover {
+/*.skillsCardsItem:hover {
   background-image: linear-gradient(135deg, #a3c0ff, #B799FF, #cde7e6), url("https://grainy-gradients.vercel.app/noise.svg");
-  background-blend-mode: multiply; /* Mélange de la texture avec le dégradé */
-}
+  background-blend-mode: multiply; 
+}*/
 
 
 .skillsTitle {
@@ -51,6 +55,6 @@
 
 .skillsIcon {
   font-size: 1rem;
-  color: blueviolet;
+  color: #9bcfce;
   margin-top: 2rem;
 }
