--- a/src/components/Home/Contact/Contact.module.css
+++ b/src/components/Home/Contact/Contact.module.css
@@ -1,9 +1,20 @@
-.titleSection {
-  padding-top: 6rem;
-}
-
-.mainContactSection {
+.contactBox {
+  padding: 18rem 2rem 18rem 4rem;
+  width: 60%;
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+
+.titleBox {
+  margin: 0rem 0rem 0rem 0rem ;
+}
+
+.subtitleBox {
+  margin: 0rem 0rem 0rem 0rem ;
+}
+
+.messageButton {
+  margin: 2rem 0rem 0rem 0rem;
 }
