--- a/src/components/Home/Contact/Contact.module.css
+++ b/src/components/Home/Contact/Contact.module.css
@@ -1,10 +1,26 @@
 .contactBox {
   padding: 18rem 2rem 18rem 4rem;
-  width: 60%;
+  width: 65%;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
+
+  @media (max-width: 600px) {
+    padding: 18rem 2rem 20rem 2rem;
+    width: 100%;
+  }
+
+  @media (min-width: 601px) and (max-width: 1500px) {
+    padding: 20rem 5rem 20rem 2rem;
+    width: 100%;
+  }
+
+  @media (min-width: 1501px) and (max-width: 1900px) {
+    padding: 20rem 10rem 20rem 2rem;
+    width: 80%;
+  }
+
 }
 
 .titleBox {
