--- a/src/components/Home/Contact/Contact.module.css
+++ b/src/components/Home/Contact/Contact.module.css
@@ -1,6 +1,7 @@
 .contactBox {
-  padding: 18rem 2rem 18rem 4rem;
+  padding: 0rem 2rem 0rem 4rem;
   width: 65%;
+  height: 70vh;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
